--- a/client/src/Components/Home/home.module.css
+++ b/client/src/Components/Home/home.module.css
@@ -1,12 +1,12 @@
 .main{
     background-color: #ECEFEC;
-    height: 550px;
+    min-height: 450px;
     width: 100%;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     /* display: flex; */
 }
 .imageDiv{
-    border: 1px solid green;
+    /* border: 1px solid green; */
     padding:50px;
 }
 .imageDiv img {
